# agent-gui

./: .gitignore  AI Workbench Wireframes.dc.html  CLAUDE.md  README.md  index.html  package-lock.json  package.json  project.md  support.js
.claude/: settings.local.json
openspec/changes/2026-06-26-browser-agent-tools/: proposal.md  tasks.md
openspec/changes/app-level-shortcuts/: design.md
openspec/changes/multiline-chat-input/: design.md
openspec/changes/ssh-connect-skill/: design.md  proposal.md  tasks.md
openspec/specs/agent-skills-loader/: spec.md
openspec/specs/app-shell/: spec.md
openspec/specs/app-shortcuts/: spec.md
openspec/specs/app-shortcuts-settings/: spec.md
openspec/specs/browser-navigation/: spec.md
openspec/specs/browser-overlay/: spec.md
openspec/specs/browser-vimium-mode/: spec.md
openspec/specs/chat-terminal-bridge/: spec.md
openspec/specs/host-lookup/: spec.md
openspec/specs/host-lookup-multi-word-search/: spec.md
skills/host-lookup/: SKILL.md  hosts.txt  lookup.ps1
skills/ssh-connect/: SKILL.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: browser-overlay.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty.rs  vimium.js
src-tauri/src/agent/: commands.rs  mod.rs  ollama.rs  skills.rs  state.rs
src-tauri/src/agent/tools/: browser.rs  mod.rs  skill_loader.rs  terminal.rs
src-tauri/src/commands/: browser.rs  keybindings.rs  mod.rs  settings.rs
src/lib/: keybindings.ts  settings.ts  terminalRegistry.ts
src/store/: workspace.ts
(+133 files in other folders)
