[package]
name = "ai-workbench"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-mcp-bridge = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
